--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fuwari",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -33,14 +33,14 @@
     "@iconify/svelte": "^4.2.0",
     "@swup/astro": "^1.7.0",
     "@tailwindcss/typography": "^0.5.16",
-    "astro": "5.13.3",
+    "astro": "5.13.5",
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
     "hastscript": "^9.0.1",
     "katex": "^0.16.22",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "overlayscrollbars": "^2.11.5",
+    "overlayscrollbars": "^2.12.0",
     "pagefind": "^1.3.0",
     "photoswipe": "^5.4.4",
     "reading-time": "^1.5.0",
@@ -56,9 +56,9 @@
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.3",
     "stylus": "^0.64.0",
-    "svelte": "^5.38.2",
+    "svelte": "^5.38.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.9.2",
+    "typescript": "5.9.2",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
@@ -72,5 +72,5 @@
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^13.0.2"
   },
-  "packageManager": "pnpm@9.14.4"
+  "packageManager": "pnpm@10.15.0"
 }
