--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@iconify-json/fa6-solid": "^1.2.4",
     "@iconify-json/material-symbols": "^1.2.33",
     "@iconify/svelte": "^4.2.0",
+    "@rollup/rollup-android-arm64": "^4.49.0",
     "@swup/astro": "^1.7.0",
     "@tailwindcss/typography": "^0.5.16",
     "astro": "5.13.5",
